# Self-Improvement-Plugin

./: .gitignore  .mcp.json  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL.md  LEDGER.md  README.md  SECURITY.md  SELFLOOP_ADAPTIVE_HARNESS_SPEC.md  SIPS_IMPROVEMENT_PLAN.md  install.sh  pyproject.toml  state.yaml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml
.ncode-plugin/: marketplace.json
.plugin-improver/: baseline.json
Graph-Theory/: README.md  architecture.md  contracts.md  operations.md  recovery.md  verification.md
agents/: escalate.md  fan-out.md  memory-curator.md  repo-scout.md  test-author.md
commands/: brainstorm.md  checkpoint.md  escalate.md  fan-out.md  goal.md  improve.md  patterns.md  recall.md  selfloop.md  teach.md  verify.md
hooks/: hooks.json
references/: capability_map.md  eval_grader_golden.json
scripts/: agent_patterns.py  autonomy_gate.py  brainstorm.py  branch_session.py  bump_version.py  compact_continuity.py  csi_presence_mirror.py  escalation_advisor.py  eval_grader_parity.py  eval_harness.py  eval_llm_judge.py  fan_out.py  fix_drafter.py  goal_state.py  harness_browser_mcp.py  harness_gc.py  harness_homebase_mcp.py  hook_event_tap.py  improvement_injector.py  memory_fabric.py  memory_fabric_answer_contract.py  memory_fabric_answer_contract_actions.py  memory_fabric_answer_contract_citations.py  memory_fabric_answer_contract_claims.py  memory_fabric_answer_contract_compliance.py  memory_fabric_answer_contract_task_gate.py  memory_fabric_answer_contract_uncertainty.py  memory_fabric_answer_eval.py  memory_fabric_answer_eval_suite.py  memory_fabric_answer_eval_suite_checks.py  memory_fabric_answer_eval_suite_ids.py  memory_fabric_answer_eval_suite_metrics.py  memory_fabric_answer_eval_suite_parse.py  memory_fabric_answer_grounding.py  memory_fabric_answer_score.py  memory_fabric_answer_terms.py  memory_fabric_answer_use_policy.py  memory_fabric_answer_use_policy_reasons.py  memory_fabric_answer_use_policy_records.py  memory_fabric_behavior_probe.py  (+171 more)
tests/: test_browser_mcp.py  test_bump_version.py  test_homebase_mcp.py  test_memory_fabric_benchmark.py  test_proactive_drift.py  (+19 more)
(+61 files in other folders)
