[project]
name = "sips-harness"
version = "0.2.0"
description = "SIPS: Self Improvement Plugin System home-base for agent harnesses."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "RasputinKaiser" }
]
keywords = [
  "agent-harness",
  "ai-agents",
  "memory-fabric",
  "mcp",
  "self-improvement",
  "sips"
]

[project.urls]
Homepage = "https://github.com/RasputinKaiser/Self-Improvement-Plugin"
Repository = "https://github.com/RasputinKaiser/Self-Improvement-Plugin"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

